# py_property_testing

./: .flake8  .gitignore  pyproject.toml
examples/: min.py  xor.py
property_testing/: argument_info.py  defines.py  property_set.py  property_testing.py  property_testing_exception.py  run_tests.py
scripts/: check.sh  format.sh
tests/: test_check.py
