[tool.poetry]
name = "property-testing"
version = "0.1.0"
description = "TODO"
authors = ["Dmitry Bakunevich <dmitry.bakunevich@syntacore.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.12"
black = "^23.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
